force-app/main/default/objects/LLC_BI__Account_Demographic__c/LLC_BI__Account_Demographic__c.object-meta.xml
<CustomObject>
    <description>This object stores additional account information for demographic.</description>
    <label>Account Demographic</label>
    <nameField>
        <label>Account Demographic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Demographics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>