force-app/main/default/objects/LLC_BI__Account_Demographic__c/fields/LLC_BI__Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Users populate this optional lookup field to reference the Account record to which an Account Demographic record refers. By default, this field is blank.</description>
    <inlineHelpText>Enter the Account record to which this Account Demographic refers.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Demographics</relationshipLabel>
    <relationshipName>Account_Demographics</relationshipName>
    <type>Lookup</type>
</CustomField>