force-app/main/default/objects/LLC_BI__Account_Demographic__c/fields/LLC_BI__Business_Ownership_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Business_Ownership_Status__c</fullName>
    <description>Users populate this optional multi-select picklist field to indicate the business ownership status. By default, it is empty.</description>
    <inlineHelpText>Select value(s) to indicate the business ownership status.</inlineHelpText>
    <label>Business Ownership Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minority-owned business</fullName>
            </value>
            <value>
                <fullName>Women-owned business</fullName>
            </value>
            <value>
                <fullName>LGBTQI+-owned business</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>