force-app/main/default/objects/LLC_BI__Account_Demographic__c/fields/LLC_BI__Business_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Business_Start_Date__c</fullName>
    <description>Users populate this optional date field to specify the business start date. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the date when the business started.</inlineHelpText>
    <label>Business Start Date</label>
    <type>Date</type>
</CustomField>