force-app/main/default/objects/LLC_BI__Account_Demographic__c/fields/LLC_BI__Estimated_Time_In_Business__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Estimated_Time_In_Business__c</fullName>
    <description>Users select this optional picklist field to specify the time in business if Business Start Date is missing. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the time in business if Business Start Date is missing.</inlineHelpText>
    <label>Estimated Time in Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applicant has been in business less than two years</fullName>
            </value>
            <value>
                <fullName>Applicant has been in business two or more years</fullName>
            </value>
            <value>
                <fullName>Not provided by applicant and otherwise undetermined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>